{
    "name": "TestInput",
    "maps": [
        {
            "name": "rotateCannon",
            "id": "2a391165-2d1e-4c34-9fa6-d3ece24755c4",
            "actions": [
                {
                    "name": "Left",
                    "type": "Button",
                    "id": "1ac0705d-c7ce-4bd0-876e-51d03887bb5e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Top",
                    "type": "Button",
                    "id": "45db457f-8e6d-4c5c-ae42-2657c3937ba9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "cde56e18-e85e-4d88-a2b0-8b674ac0b4cf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Down",
                    "type": "Button",
                    "id": "1f63ca65-5e7f-493d-9b3c-f459ab8f564c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PreciseMode",
                    "type": "Button",
                    "id": "a253a0ad-449f-4d55-b10c-959be20ceb6d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "54aea955-bcfe-499f-af9a-07b85ab02d25",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f3f97fef-fb83-4d8f-83e5-392728908fd4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Top",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ff83fe5-51a2-4563-808f-516a5babf24e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c49ab0a-098e-49bb-8a47-802ed18152ae",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "04c56d2e-ceb5-4e29-b611-a20ac05671db",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreciseMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}